--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   provider: ^6.0.1
   gap: ^2.0.0
 
@@ -22,4 +21,7 @@ dev_dependencies:
   lints: ^1.0.1
 
 flutter:
-  uses-material-design: false
+  uses-material-design: true
+  assets:
+    - assets/
+    - assets/images/
